Adjust for uniswap v3 polygon deployment via goldsky

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 Reference/
 .vscode/
 
-subgraph.yaml
-versions.ts
-deploymentJsonContext.json
-**/configurations/configure.ts
+# subgraph.yaml
+# versions.ts
+# deploymentJsonContext.json
+# **/configurations/configure.ts
 generated/
-subgraphs/**/build/
+# subgraphs/**/build/
 
 **/.DS_Store
 
