Update files for derpdex

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 Reference/
 .vscode/
 
-subgraph.yaml
-versions.ts
+# subgraph.yaml
+# versions.ts
 deploymentJsonContext.json
 **/configurations/configure.ts
 generated/
