--- a/subgraphs/uniswap-v3-forks/package.json
+++ b/subgraphs/uniswap-v3-forks/package.json
@@ -5,8 +5,8 @@
     "codegen": "graph codegen",
     "build": "graph build",
     "prepare:constants": "mustache protocols/uniswap-v3/config/deployments/fraxtal-testnet-trinity/configurations.json configurations/configure.mustache > configurations/configure.ts",
-    "create-fraxtal-testnet": "graph create --node http://52.11.39.166:8020 stablyio/uniswap-v3-messari-testnet",
-    "deploy-fraxtal-testnet": "graph deploy stablyio/uniswap-v3-messari-testnet --node http://52.11.39.166:8020"
+    "create-fraxtal-testnet": "graph create --node http://52.11.39.166:8020 stablyio-uniswap-v3-messari-testnet",
+    "deploy-fraxtal-testnet": "graph deploy stablyio-uniswap-v3-messari-testnet --ipfs https://api.thegraph.com/ipfs/ --node http://52.11.39.166:8020"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "^0.55.0",
